Added Generic Repo and Specification pattern

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "default":"server=localhost;database=Project;user id=root;password=admin123"
-  }
+  },
+  "ApiUrl":"http://localhost:5294/"
 }
